@@ -1,3 +1,12 @@
+2006-04-16  Elijah Newren  <newren gmail com>
+
+	Patch from Dan Sanders to fix #334899.
+
+	* window.c (meta_window_new_with_attrs): Unminimize ancestors of
+	new windows when mapped; this prevents e.g. confirmation windows
+	from causing applications to appear locked when closing via the
+	window list.
+
 2006-04-15  Elijah Newren  <newren gmail com>
 
 	Patch from Dan Sanders to fix #335076.
